--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -55,14 +55,18 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-<!--                   IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
+                <!-- IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="mx.devf" />
             </intent-filter>
         </receiver>
 
         <activity
             android:name=".DetailActivity"
-            android:label="@string/title_activity_detail">
+            android:label="@string/title_activity_detail" >
+        </activity>
+        <activity
+            android:name=".DetailViewPagerActivity"
+            android:label="@string/title_activity_detail_view_pager" >
         </activity>
     </application>
 
